ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: books
spec:
  entryPoints:
    - websecure
  routes:
  - match: Path(`/`)
    kind: Rule
    services:
    - name: books
      port: 8080
  tls:
    secretName: books.nickiness.com
